hphp/test/zend/good/Zend/tests/bug63882.php.expectf

Fatal error: infinite recursion detected in %s/bug63882.php on line 9
